--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   "dependencies": {
     "preact": "^7.1.0",
     "preact-compat": "^3.10.0",
+    "preact-shallow-compare": "^1.2.0",
+    "react-router": "^3.0.1",
     "whatwg-fetch": "^1.0.0"
   },
   "scripts": {
